# cqf

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  approx_test
include/: gpu_approx_filter.cuh  gqf.cuh  gqf.h  gqf_int.cuh  gqf_int.h  gqf_mhm2_wrapper.cuh  gqf_wrapper.cuh  owens_wrapper.cuh
src/: CMakeLists.txt  approx_test.cu  corigpu-env.sh  gqf.c  gqf.cu  gqf_file.c  gqf_file.cu  test.c  test.cu
src/test_home/: test.cu
